apps/guia/overlays/dev/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guia-backend
spec:
  ingressClassName: traefik
  rules:
    - host: api.guia-dev.ionflux.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guia-backend
                port:
                  number: 3000
